[MODUSERSKC-116]. Adjust user's migration to include shadow users